--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Weird cat
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: weird cat from another universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://https://i.ytimg.com/vi/BAMJ2dvyfcA/maxresdefault.jpg
 #
 # Flags below are optional
 #
@@ -21,14 +20,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: WeirdCat1
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube:https://www.youtube.com/watch?v=fTJ5o_uW3eM
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
