--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Weird cat
 description: weird cat from another universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://https://i.ytimg.com/vi/BAMJ2dvyfcA/maxresdefault.jpg
+avatar: https://i.ytimg.com/vi/BAMJ2dvyfcA/maxresdefault.jpg
 #
 # Flags below are optional
 #
@@ -27,7 +27,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: WeirdCat1
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube:https://www.youtube.com/watch?v=fTJ5o_uW3eM
+  youtube:thesunnewspaper
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
