--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ footer-links:
   flickr:
   github: 
   instagram:
-  linkedin:
+  linkedin: linkedin.com/in/azeezsanya
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: WeirdCat1
+  twitter: king_adesanya
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube:
   googleplus: # anything in your profile username that comes after plus.google.com/
