--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Weird cat
+name: Azeez Adesanya
 
 # Short bio or description (displayed in the header)
-description: weird cat from another universe
+description: Data Enthusiast | Data Scientist | Business Development | 5+ Years in Tourism and Retail industries
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://i.ytimg.com/vi/BAMJ2dvyfcA/maxresdefault.jpg
