--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Azeez Adesanya
 description: Data Enthusiast | Data Scientist | Business Development | 5+ Years in Tourism and Retail industries
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i.ytimg.com/vi/BAMJ2dvyfcA/maxresdefault.jpg
+avatar: https://drive.google.com/open?id=1SUxeLdytYbavF7UzjqVyPMQo1wGMtdDY
 #
 # Flags below are optional
 #
