--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Azeez Adesanya
 description: Data Enthusiast | Data Scientist | Business Development | 5+ Years in Tourism and Retail industries
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://drive.google.com/open?id=1SUxeLdytYbavF7UzjqVyPMQo1wGMtdDY
+avatar: https://github.com/azeezsanya/azeezsanya.github.io/blob/master/images/068-.jpg
 #
 # Flags below are optional
 #
