--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Azeez Adesanya
 
 # Short bio or description (displayed in the header)
-description: Data Enthusiast | Data Scientist | Business Development | 5+ Years in Tourism and Retail industries
+description: Data Enthusiast | Data Scientist | Analytics| Business Development | Python | SQL | Tableau | Power BI | R
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/azeezsanya/azeezsanya.github.io/blob/master/images/068-.jpg
