--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   flickr:
   github: 
   instagram:
-  linkedin: linkedin.com/in/azeezsanya
+  linkedin: azeezsanya
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: king_adesanya
